--- a/src/app/admin-products/admin-products.component.html
+++ b/src/app/admin-products/admin-products.component.html
@@ -1,6 +1,8 @@
 <div class="m-5">
-
-  <table class="table table-sm table-bordered w-50">
+  <div class="bg-info text-white p-2">
+    Selected Poduct: {{selectedProduct || '(None)'}}
+  </div>
+  <table class="table table-sm table-bordered w-50 mt-2">
     <thead>
       <tr>
         <th>Id</th>
@@ -10,9 +12,9 @@
         <th style="width: 150px;"></th>
       </tr>
     </thead>
-    
+
     <tbody>
-      <tr *ngFor="let product of products">
+      <tr *ngFor="let product of products" (mouseover)="selectedProduct=product.name" (mouseleave)="selectedProduct='(None)'">
         <td>{{ product.id }}</td>
         <td>
           <img src="/assets/img/{{ product.imageUrl }}" width="80">
@@ -25,7 +27,7 @@
         </td>
       </tr>
     </tbody>
-   
+
   </table>
 
 </div>
