--- a/src/app/admin-products/admin-products.component.html
+++ b/src/app/admin-products/admin-products.component.html
@@ -14,9 +14,10 @@
             <th style="width: 150px;"></th>
           </tr>
         </thead>
-    
+
         <tbody>
-          <tr *ngFor="let product of products" (mouseover)="selectedProduct=product.name" (mouseleave)="selectedProduct='(None)'" [class.bg-info]="getSelected(product)">
+          <tr *ngFor="let product of products" (mouseover)="pName.value=product.name"
+            (mouseleave)="pName.value='(None)'" [class.bg-info]="pName.value==product.name">
             <td>{{ product.id }}</td>
             <td>
               <img src="/assets/img/{{ product.imageUrl }}" width="80">
@@ -29,15 +30,14 @@
             </td>
           </tr>
         </tbody>
-    
+
       </table>
     </div>
     <div class="col-md-6">
       <div class="form-group">
         <label>Product Name</label>
-        <input (input)="selectedProduct=$event.target.value" type="text" class="form-control">
+        <input #pName (keyup.enter)="selectedProduct=pName.value" type="text" class="form-control">
       </div>
     </div>
   </div>
 </div>
-
