5-Ürün Detaylarının Gösterilmesi

--- a/src/app/admin-products/admin-products.component.html
+++ b/src/app/admin-products/admin-products.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="bg-info text-white p-2">
-        Selected Poduct: {{selectedProduct || '(None)'}}
+        Selected Poduct: {{selectedProduct.name || '(None)'}}
       </div>
       <table class="table table-sm table-bordered mt-2">
         <thead>
@@ -16,8 +16,7 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let product of products" (mouseover)="pName.value=product.name"
-            (mouseleave)="pName.value='(None)'" [class.bg-info]="pName.value==product.name">
+          <tr *ngFor="let product of products" [class.bg-info]="getSelected(product)">
             <td>{{ product.id }}</td>
             <td>
               <img src="/assets/img/{{ product.imageUrl }}" width="80">
@@ -26,7 +25,7 @@
             <td>{{ product.price }}</td>
             <td>
               <button class="btn btn-danger btn-sm">Delete</button>
-              <button class="btn btn-primary btn-sm">Update</button>
+              <button (click)="editProduct(product)" class="btn btn-primary btn-sm ml-2">Edit</button>
             </td>
           </tr>
         </tbody>
@@ -35,8 +34,24 @@
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label>Product Name</label>
-        <input #pName (keyup.enter)="selectedProduct=pName.value" type="text" class="form-control">
+        <label>Name</label>
+        <input #pName [value]="selectedProduct.name" (keyup.enter)="selectedProduct=pName.value" type="text"
+          class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Price</label>
+        <input #pPrice [value]="selectedProduct.price" (keyup.enter)="selectedProduct=pPrice.value" type="text"
+          class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Image</label>
+        <input #pImageUrl [value]="selectedProduct.imageUrl" (keyup.enter)="selectedProduct=pImageUrl.value" type="text"
+          class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Discription</label>
+        <textarea #pDescription [value]="selectedProduct.description" (keyup.enter)="selectedProduct=pDescription.value" type="text"
+          class="form-control"></textarea>
       </div>
     </div>
   </div>
