--- a/src/app/admin-products/admin-products.component.html
+++ b/src/app/admin-products/admin-products.component.html
@@ -1,7 +1,7 @@
 <div class="container m-5">
   <div class="row">
     <div class="col-md-6">
-      <div class="bg-info text-white p-2">
+      <div class="bg-info text-white p-2" *ngIf="selectedProduct">
         Selected Poduct: {{selectedProduct.name || '(None)'}}
       </div>
       <table class="table table-sm table-bordered mt-2">
@@ -32,27 +32,28 @@
 
       </table>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" *ngIf="selectedProduct">
       <div class="form-group">
         <label>Name</label>
-        <input #pName [value]="selectedProduct.name" (keyup.enter)="selectedProduct=pName.value" type="text"
+        <input #pName [value]="selectedProduct.name" type="text"
           class="form-control">
       </div>
       <div class="form-group">
         <label>Price</label>
-        <input #pPrice [value]="selectedProduct.price" (keyup.enter)="selectedProduct=pPrice.value" type="text"
+        <input #pPrice [value]="selectedProduct.price"  type="text"
           class="form-control">
       </div>
       <div class="form-group">
         <label>Image</label>
-        <input #pImageUrl [value]="selectedProduct.imageUrl" (keyup.enter)="selectedProduct=pImageUrl.value" type="text"
+        <input #pImageUrl [value]="selectedProduct.imageUrl"  type="text"
           class="form-control">
       </div>
       <div class="form-group">
-        <label>Discription</label>
-        <textarea #pDescription [value]="selectedProduct.description" (keyup.enter)="selectedProduct=pDescription.value" type="text"
+        <label>Description</label>
+        <textarea #pDescription [value]="selectedProduct.description" type="text"
           class="form-control"></textarea>
       </div>
+      <button class="btn btn-primary" (click)="saveChanges(pName.value,pPrice.value,pImageUrl.value,pDescription.value)">Save Changes</button>
     </div>
   </div>
 </div>
