7-Çift Yönlü Veri Bağlama

--- a/src/app/admin-products/admin-products.component.html
+++ b/src/app/admin-products/admin-products.component.html
@@ -24,7 +24,7 @@
             <td>{{ product.name }}</td>
             <td>{{ product.price }}</td>
             <td>
-              <button class="btn btn-danger btn-sm">Delete</button>
+              <button class="btn btn-danger btn-sm" (click)="deleteProduct(product)">Delete</button>
               <button (click)="editProduct(product)" class="btn btn-primary btn-sm ml-2">Edit</button>
             </td>
           </tr>
